data/derived/sp14/progs/unify/prog2295.ml.out
Characters 300-370:
  buildTimes(buildAverage(build(rand + 3, depth - 1), build(rand - 1, depth - 1)))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
